<resources>
    <string name="app_name">Q Space</string>
    <string name="action_out">Sign Out</string>
    <string name="title_activity_lvl">Stages</string>
    <string name="title_activity_ordered">OrderedActivity</string>
    <string name="title_activity_suggest">Suggest Q</string>
    <string name="title_activity_random">RandomActivity</string>
    <string name="loading">Loading</string>
    <string name="sign_in_google">Sign in with Google account</string>
    <string name="enter_nickname">Enter a username</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="enter_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account</string>
    <string name="need_account">Need an Account?</string>
    <string name="nick_error">Username is Already Taken!</string>
    <string name="nick_error_toast">Change username and try again..</string>
    <string name="auth_fail">Registration failed, check internet connection.</string>
    <string name="auth_fail_google">Registration failed; service might not be responding, try again later.</string>
    <string name="failed_verify_email">Failed to send verification email</string>
    <string name="verify_email_sent">Verification e-mail is sent</string>
    <string name="reset_email_sent">Reset password e-mail sent to %1$s</string>
    <string name="reset_email_failed">Reset pw e-mail couldn\'t sent; Check if e-mail address is valid!</string>
    <string name="tv_warn">Verify your e-mail address..!</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="suggest_q">Suggest_Q</string>
    <string name="info">Info</string>
    <string name="listener_cancelled">Warning: Check if you have an active internet connection!</string>
    <string name="ufo_foreign">\"Q?!@,#$\"</string>
    <string name="ufo_hello">\"Who are you passenger?\"</string>
    <string name="ufo_hello_negative">\"Mind your own business\"</string>
    <string name="ufo_hello_negative_answer">\"Ok kid, later…\"</string>
    <string name="ufo_hello_positive_answer">\"Well, nice to meet you,\n
        but i gotta go now!\n
        cya around \'%1$s\'\"
    </string>
    <string name="ufo_met_before">\"%1$s! it\'s you again!\"</string>
    <string name="ufo_met_before_low_points">\"You should endeavor more\n
        before we chat further\n
        until then, goodbye!\"
    </string>
    <string name="ufo_met_before_high_points">\"It seems\n
        you are ready\n
        for an extra game\"
    </string>
    <string name="ufo_high_point_positive">\"Yeah!, I\'m ready! Let\'s go!\"</string>
    <string name="ufo_high_point_negative">\"Nah!, I am not in the mood!\"</string>
    <string name="level">"Location:"</string>
    <string name="total_points">Total Points:</string>
    <string name="username">Username:</string>
    <string name="email">E-Mail:</string>
    <string name="tv_earned_upvote">Upvotes gained =</string>
    <string name="tv_earned_upvote1">
        \nYou are joining the community, go on like that.
    </string>
    <string name="tv_earned_upvote2">
        \nIt seems like some of the users remember you.
    </string>
    <string name="tv_earned_upvote3">
        \nWith a quick glance We can tell that you are getting popular in the community
    </string>
    <string name="tv_earned_upvote4">
        \nYou are one of the most popular community members, every player knows you
    </string>
    <string name="tv_earned_upvote5">You didn\'t gain any Upvotes for your comments until now. Keep up the good work!
    </string>
    <string name="after_points_quote">After 40000 points you can add a quote here!</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="suggest_intro">You can suggest a question to us. We will review it in time. Until that; the suggestion
        is editable and removable.
    </string>
    <string name="date_time">date | time</string>
    <string name="send">Send</string>
    <string name="touch_longer">Touch Longer to Upvote</string>
    <string name="own_comment">Own comment is not votable but removable</string>
    <string name="upvote_back">You Took Back the Upvote</string>
    <string name="minimum_letters">Minimum 5 letters!</string>
    <string name="write_comment">Write your comment here…</string>
    <string name="comment_will_deleted">Your comment will be deleted, Are you sure?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="no_don_t">No, don\'t</string>
    <string name="player_quote">says \'%1$s\'</string>
    <string name="player_level">is on \'%1$s\'</string>
    <string name="player_points">has \'%1$d\' points</string>
    <string name="player_ups">has \'%1$d\' Upvotes</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="num3">Number 3</string>
    <string name="bravo">Bravo! Answer is accepted!</string>
    <string name="wrong_answer">Wrong answer, try again!</string>
    <string name="come_on">Come on mate you passed this stage before!</string>
    <string name="missing_number">Missing number?</string>
    <string name="enter_answer">Enter Your Answer!</string>
    <string name="user_not_allowed_to_next_stages">You need at least %1$d points to access next Stages!</string>
    <string name="pw">get the obvious stuff out of the way</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="show_comments">Comments</string>
    <string name="what_is_your_solution">Your Comment?</string>
    <string name="give_up_read_comments">Reading comments now will sacrifice the points you will gain from this
        question,
        Are you sure?
    </string>
    <string name="yes_give_up">Yes; Give Up!</string>
    <string name="no">No</string>
    <string name="popup_internet">You need an active internet connection to play Q Space. We synchronize your progress
        and status simultaneously.
    </string>
    <string name="next_stage">Next Stage</string>
    <string name="congratz_you_achieved_enough_points">Bravo! You earned enough points to play new stages!</string>
    <string name="main_menu">Main Menu</string>
    <string name="choose_not_included">Choose the one not included!</string>
    <string name="keep_in_mind">Keep in mind!</string>
    <string name="the_next_number">What\'s the next number?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="terms_conditions"><![CDATA[Terms&Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_info">Info &amp; FAQ</string>
    <string name="info_intro">Hello %1$s. \n
        Q Space is a math based game which inspired from IQ tests.\n
    </string>
    <string name="i_dont_know_you_no_internet_player">Hello, Player!, I don\'t know you because you don\'t have internet connection!\n
        Q Space is a math based game which inspired from IQ tests.\n
    </string>
    <string name="info_mission">
        Mission: Q Space aims to entertain people while solving some math based IQ tests.\n
    </string>
    <string name="info_vision">
        Vision: Q Space; in the long run, as an interactive game, targets drawing attention to the abstract thought basics with a wide profile community, step by step.\n
    </string>
    <string name="info_how">
        \"What can i do?\"\n
        - First; you can enjoy the stages.\n
        - You can comment to the stages to share your perspective. So some questions may have different solutions for the answer.\n
        - You can upvote the useful comments\n
        - You can suggest a question to the Q Space!\n
        - With the steps above, you can get points \n
            *to gain some extra features\n
            *to jump up to a new moon or planet\n
            *You may even find some secrets…\n

        Have Fun!
    </string>
    <string name="info_faq_see_comments">\"How can i see the comments or write one to the stages?\"</string>
    <string name="info_faq_see_comments_answer">In every stage there is a button on the right bottom. But you have to find the right answer or give up from the points to see them.</string>
    <string name="info_faq_upvote">\"How to upvote a comment?\"</string>
    <string name="info_faq_upvote_answer">By long pressing(touching) to the specific comment. Just a note you can\'t upvote your own comment.</string>
    <string name="info_faq_undo_upvote">\"How to undo my upvote?\"</string>
    <string name="info_faq_undo_upvote_answer">Same with upvoting; by long pressing(touching) to the comment that upvoted before. (Green number at the bottom right corner of the comment means you upvoted the comment before)</string>
    <string name="info_faq_profile_sum">\"How to see another player\'s profile summary?\"</string>
    <string name="info_faq_profile_sum_answer">Double pressing(touching) to the comment will pop up a window that contains the summary of the player.</string>
    <string name="info_faq_delete_comment">\"How to delete my comment?\"</string>
    <string name="info_faq_delete_comment_answer">By long pressing(touching) to your own comment.</string>
    <string name="info_faq_edit_comment">\"How to edit my comment?\"</string>
    <string name="info_faq_edit_comment_answer">If you wrote a comment to any stage\'s comment page but didn\'t leave yet, writing a new comment will replace your last comment. But Once you left that page, you can\'t edit your comment.(Yes you can still delete!)</string>
    <string name="info_faq_should_comment">\"Why should i comment?\"</string>
    <string name="info_faq_should_comment_answer">If your comment gets an upvote you will gain some points. Besides isn\'t sharing enough?</string>
    <string name="info_faq_for_kids">\"Is the game ok for kids?\"</string>
    <string name="info_faq_for_kids_answer">Sure, therefore; we didn\'t add P.M. and subcomment functions to the game.</string>
    <string name="info_faq_ufo"> \"What is that ufo in the main menu?\"</string>
    <string name="info_faq_ufo_answer">Ask yourself!</string>
    <string name="info_faq_suggest_review">\"How may i know if my question suggest reviewed?\</string>
    <string name="info_faq_suggest_review_answer">You will see an empty text area when you opened the "Suggest_Q" page.</string>
    <string name="info_faq_suggest_add">\"When will you add my suggested question?\"</string>
    <string name="info_faq_suggest_add_answer">If it is approved, it would be added to the queue. So it will be published when it is time.</string>
    <string name="info_faq_suggest_approve">\"How may i know if it\'s approved?\"</string>
    <string name="info_faq_suggest_approve_answer">We will send e-mail to you to inform.</string>
    <string name="info_faq_score_procedure">\"Stage scoring procedure?\"</string>
    <string name="info_faq_score_procedure_answer">Answer as fast as you can.</string>
    <string name="faq">--FAQ--</string>
    <string name="reminds_of">Animation reminds you of …?</string>
    <string name="school">School</string>
    <string name="trash">Trash Yard</string>
    <string name="camp">Camp</string>
    <string name="dog_park">Dog Park</string>
    <string name="title_activity_privacy">Privacy Policy</string>
</resources>