<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   android:maxWidth="280dp"
                                                   android:background="@drawable/custom_comment"
                                                   android:padding="8dp">

    <TextView
            android:id="@+id/tv_text_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coda"
            android:text="@string/congratz_you_achieved_enough_points"
            android:textAlignment="center"
            android:textColor="@color/colorSpace"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/iv_spaceMedal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/iv_spaceMedal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:tint="@color/colorPurple"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_top"
            app:srcCompat="@drawable/ic_spacemedal"
            app:tintMode="multiply"
            tools:ignore="VectorDrawableCompat" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorSpace"
            android:fontFamily="@font/coda"
            android:gravity="center_horizontal"
            android:text="@string/congratulations"
            android:textColor="@color/colorSpaceWhite"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_spaceMedal" />
    <Button
            android:text="@string/show_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toEndOf="@id/butt_main_pop"
            android:background="@drawable/butt_profile_tabs"
            android:onClick="showComments" android:fontFamily="@font/coda" android:textSize="12sp"
            android:textColor="@color/colorSpaceWhite" app:layout_constraintEnd_toStartOf="@+id/butt_next_pop"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/next_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/butt_next_pop" android:onClick="showNext" android:fontFamily="@font/coda"
            android:textSize="12sp"
            android:background="@drawable/custom_butt_profile_tabs" android:textColor="@color/colorSpaceWhite"
            app:layout_constraintTop_toTopOf="@+id/button" app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/textView"/>
    <Button
            android:text="@string/main_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butt_main_pop"
            android:background="@drawable/butt_profile_tabs"
            android:fontFamily="@font/coda" android:textColor="@color/colorSpaceWhite"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button" app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/textView" android:textSize="12sp" android:onClick="mainMenu"/>
</androidx.constraintlayout.widget.ConstraintLayout>