<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   android:background="@drawable/custom_comment">


    <TextView
            android:text="@string/comment_will_deleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:gravity="center"
            android:fontFamily="@font/coda" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttYes" android:textSize="14sp"/>
    <Button
            android:text="@string/yes_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttYes"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toStartOf="@+id/buttNo"
            android:layout_marginEnd="8dp" android:textAllCaps="false" android:background="@drawable/custom_giveup"
            android:textColor="@color/colorSpaceWhite" android:fontFamily="@font/coda"/>
    <Button
            android:text="@string/no_don_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttNo"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttYes"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/buttYes" app:layout_constraintBottom_toBottomOf="@+id/buttYes"
            android:textAllCaps="false" android:background="@drawable/custom_button_login"
            android:textColor="@color/colorSpaceWhite" android:fontFamily="@font/coda"/>
</androidx.constraintlayout.widget.ConstraintLayout>