<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:fillViewport="true" android:background="@drawable/bg_gradient"
        android:id="@+id/layoutbg">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:id="@+id/etNick"
                android:hint="@string/enter_nickname"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:maxLength="24"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/etEmail" android:background="@drawable/custom_edittext"
                android:textColor="@color/colorPrimary" android:textColorHighlight="@color/colorPurple"
                android:textColorHint="@color/colorGreyLight" android:textColorLink="@color/colorSpaceWhite"
                android:textCursorDrawable="@null" android:fontFamily="@font/gruppo" android:textSize="14sp"
                android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvNickError"
                android:textColor="@android:color/holo_red_dark"
                android:fontFamily="@font/coda" android:textStyle="bold" android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/buttYok" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/buttYok"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:textSize="14sp" android:layout_marginTop="66dp"
                app:layout_constraintTop_toBottomOf="@+id/buttGoogle"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:id="@+id/etEmail"
                android:hint="@string/enter_email"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/etNick" app:layout_constraintStart_toStartOf="@+id/etNick"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etNick"
                android:textColorHint="@color/colorGreyLight" android:textColorHighlight="@color/colorPurple"
                android:textColor="@color/colorPrimary" android:background="@drawable/custom_edittext"
                android:textColorLink="@color/colorSpaceWhite" android:textCursorDrawable="@null"
                android:fontFamily="@font/gruppo" android:textSize="14sp" android:textStyle="bold"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:id="@+id/etPassword"
                android:hint="@string/enter_password" android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/etEmail" app:layout_constraintStart_toStartOf="@+id/etEmail"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etEmail"
                android:background="@drawable/custom_edittext" android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPurple" android:textColorHint="@color/colorGreyLight"
                android:textColorLink="@color/colorSpaceWhite" android:textCursorDrawable="@null"
                android:fontFamily="@font/gruppo" android:textSize="14sp" android:textStyle="bold"/>
        <Button
                android:text="@string/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttLogin"
                android:onClick="buttLoginEvent"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
                app:layout_constraintBottom_toTopOf="@+id/buttVar" android:background="@drawable/custom_button_login"
                android:textColor="@color/colorSpaceWhite" android:textColorHighlight="@color/colorPurple"
                android:textColorHint="@color/colorSpaceWhite" android:fontFamily="@font/coda"
                android:textSize="18sp" android:textStyle="bold"/>

        <Button
                android:text="@string/common_signin_button_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttSign" android:onClick="buttSigninEvent"
                android:enabled="false"
                android:background="@drawable/custom_button_login" android:textColor="@color/colorSpaceWhite"
                android:textColorHighlight="@color/colorPurple" android:textColorHint="@color/colorSpaceWhite"
                app:layout_constraintEnd_toEndOf="@+id/buttLogin"
                app:layout_constraintTop_toTopOf="@+id/buttLogin"
                app:layout_constraintBottom_toBottomOf="@+id/buttLogin"
                app:layout_constraintStart_toStartOf="@+id/buttLogin" android:fontFamily="@font/coda"
                android:textSize="18sp" android:textStyle="bold"/>
        <Button
                android:text="@string/already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttVar" android:textAllCaps="false"
                android:background="#00CA8080"
                app:layout_constraintEnd_toEndOf="@+id/buttLogin"
                app:layout_constraintStart_toStartOf="@+id/buttLogin"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/buttLogin" android:textColor="@color/colorSpaceWhite"
                android:textColorHighlight="@color/colorAccent" android:textColorHint="@color/colorSpaceWhite"
                android:fontFamily="@font/coda" android:textSize="18sp"/>
        <Button
                android:text="@string/need_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttYok"
                app:layout_constraintEnd_toEndOf="@+id/buttVar" app:layout_constraintStart_toStartOf="@+id/buttVar"
                app:layout_constraintTop_toTopOf="@+id/buttVar" app:layout_constraintBottom_toBottomOf="@+id/buttVar"
                android:textAllCaps="false" android:background="#005E1515" android:textColor="@color/colorSpaceWhite"
                android:textColorHighlight="@color/colorAccent" android:textColorHint="@color/colorSpaceWhite"
                android:fontFamily="@font/coda" android:textSize="18sp"/>
        <Button
                android:text="@string/sign_in_google"
                android:drawableStart="@drawable/ic_googleicon"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttGoogle"
                android:background="@drawable/custom_butt_google" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/buttYok"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvNickError"
                android:textAlignment="center" android:textColor="@color/colorPrimaryDark" android:textAllCaps="false"
                android:fontFamily="@font/coda" android:textSize="16sp"
                android:paddingEnd="48dp" android:paddingStart="4dp" android:paddingBottom="4dp"
                android:paddingTop="4dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:translationZ="90dp"
                app:srcCompat="@drawable/ic_google" android:id="@+id/ivGoogle"
                app:layout_constraintBottom_toBottomOf="@+id/buttGoogle"
                app:layout_constraintTop_toTopOf="@+id/buttGoogle"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toEndOf="@+id/buttGoogle" android:layout_marginEnd="8dp"
        />
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline"
                                                    app:layout_constraintGuide_percent="0.5"
                                                    android:orientation="vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>